Bug 1949691 - Text Fragments: Only use visible content when stringifying ranges. r=emilio

Using `nsRange::ToString()` simply concatenates all text nodes (see [0]).
However, for creating text fragments only visible text nodes should be considered.
This patch implements a function that only considers visible text nodes
by reusing some utility functions defined in the text fragments spec ([1], [2]).

[0]: https://dom.spec.whatwg.org/#dom-range-stringifier
[1]: https://wicg.github.io/scroll-to-text-fragment/#visible-text-node
[2]: https://wicg.github.io/scroll-to-text-fragment/#non-searchable-subtree

Differential Revision: https://phabricator.services.mozilla.com/D239800